--- a/_includes/sections/program.html
+++ b/_includes/sections/program.html
@@ -1,7 +1,6 @@
-<section id="program" class="section" data-animate>
+<section id="program" class="section program-agenda" data-animate>
   <div class="section-title">
-    <p class="eyebrow">Program</p>
-    <h2>Full-day agenda (subject to CVPR guidelines)</h2>
+    <h2>Agenda</h2>
   </div>
   <div class="schedule">
     {% for item in site.data.program %}
