--- a/_includes/sections/faq.html
+++ b/_includes/sections/faq.html
@@ -1,7 +1,7 @@
 <section id="faq" class="section alt" data-animate>
   <div class="section-title">
-    <p class="eyebrow">FAQ</p>
-    <h2>Frequently asked questions</h2>
+    <!-- <p class="eyebrow">Questions and answers</p> -->
+    <h2>FAQ</h2>
   </div>
   <div class="faq">
     {% for item in site.data.faq %}
