Refine workshop content and layout

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
 <header class="site-header">
   <nav class="nav">
     <a class="brand" href="{{ '/' | relative_url }}" aria-label="{{ site.data.site.brand.name }} Home">
-      <img src="{{ '/assets/logo.svg' | relative_url }}" alt="{{ site.data.site.brand.name }}" />
+      <img src="{{ '/assets/logo_v2.png' | relative_url }}" alt="{{ site.data.site.brand.name }}" />
       <span>
         <strong>{{ site.data.site.brand.name }}</strong>
         <em>{{ site.data.site.brand.subtitle }}</em>
