--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
     <meta name="twitter:title" content="{{ page_title }}" />
     <meta name="twitter:description" content="{{ page_description }}" />
     <meta name="twitter:image" content="{{ og_image | absolute_url }}" />
-    <link rel="icon" href="{{ '/assets/logo.svg' | relative_url }}" type="image/svg+xml" />
+    <link rel="icon" href="{{ '/assets/logo_v2.png' | relative_url }}" type="image/png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
