--- a/_includes/sections/organizers.html
+++ b/_includes/sections/organizers.html
@@ -1,7 +1,7 @@
 <section id="organizers" class="section" data-animate>
   <div class="section-title">
     <!-- <p class="eyebrow">Organizers</p> -->
-    <h2>Workshop organizers</h2>
+    <h2>Workshop Organizers</h2>
   </div>
   <div class="grid organizers">
     {% for organizer in site.data.organizers %}
