--- a/_includes/sections/speakers.html
+++ b/_includes/sections/speakers.html
@@ -4,7 +4,10 @@
     <h2>Speakers</h2>
   </div>
   {% assign published_speakers = site.data.speakers | where_exp: "s", "s.publish == true" %}
-  {% assign speaker_limit = include.limit | default: 4 %}
+  {% assign speaker_limit = nil %}
+  {% if include.mode == "summary" %}
+    {% assign speaker_limit = include.limit | default: 4 %}
+  {% endif %}
   {% if published_speakers.size == 0 %}
     <div class="callout">
       <h3>Speakers to be announced</h3>
@@ -13,48 +16,94 @@
     </div>
   {% else %}
     <div class="grid speakers">
-      {% assign featured_speakers = published_speakers | where_exp: "s", "s.type != 'panel'" %}
-      {% for speaker in featured_speakers limit: speaker_limit %}
-        {% if speaker.type == "panel" and include.mode != "summary" %}
-          <article class="highlight">
-            <h3>{{ speaker.name }}</h3>
-            <p>{{ speaker.org }}</p>
-            <span>{{ speaker.focus }}</span>
-          </article>
-        {% else %}
-          <article>
-            {% if speaker.photo and speaker.photo != "" %}
-              <img class="avatar-photo" src="{{ speaker.photo | relative_url }}" alt="{{ speaker.name }}" />
-            {% else %}
-              <div class="avatar">{{ speaker.initials }}</div>
+      {% assign featured_speakers = published_speakers %}
+      {% if speaker_limit %}
+        {% for speaker in featured_speakers limit: speaker_limit %}
+          {% if speaker.type == "panel" %}
+            {% if include.mode != "summary" %}
+              <article class="highlight">
+                <h3>{{ speaker.name }}</h3>
+                <p>{{ speaker.org }}</p>
+                <span>{{ speaker.focus }}</span>
+              </article>
             {% endif %}
-            {% assign profile_url = speaker.profile %}
-            {% if profile_url == nil or profile_url == "" %}
-              {% if speaker.links %}
-                {% if speaker.links.home and speaker.links.home != "" %}
-                  {% assign profile_url = speaker.links.home %}
-                {% elsif speaker.links.scholar and speaker.links.scholar != "" %}
-                  {% assign profile_url = speaker.links.scholar %}
-                {% elsif speaker.links.linkedin and speaker.links.linkedin != "" %}
-                  {% assign profile_url = speaker.links.linkedin %}
+          {% else %}
+            <article>
+              {% if speaker.photo and speaker.photo != "" %}
+                <img class="avatar-photo" src="{{ speaker.photo | relative_url }}" alt="{{ speaker.name }}" />
+              {% else %}
+                <div class="avatar">{{ speaker.initials }}</div>
+              {% endif %}
+              {% assign profile_url = speaker.profile %}
+              {% if profile_url == nil or profile_url == "" %}
+                {% if speaker.links %}
+                  {% if speaker.links.home and speaker.links.home != "" %}
+                    {% assign profile_url = speaker.links.home %}
+                  {% elsif speaker.links.scholar and speaker.links.scholar != "" %}
+                    {% assign profile_url = speaker.links.scholar %}
+                  {% elsif speaker.links.linkedin and speaker.links.linkedin != "" %}
+                    {% assign profile_url = speaker.links.linkedin %}
+                  {% endif %}
                 {% endif %}
               {% endif %}
-            {% endif %}
-            {% if profile_url and profile_url != "" %}
-              <h3><a class="profile-link" href="{{ profile_url }}" target="_blank" rel="noopener">{{ speaker.name }}</a></h3>
-            {% else %}
+              {% if profile_url and profile_url != "" %}
+                <h3><a class="profile-link" href="{{ profile_url }}" target="_blank" rel="noopener">{{ speaker.name }}</a></h3>
+              {% else %}
+                <h3>{{ speaker.name }}</h3>
+              {% endif %}
+              <p>{{ speaker.org }}</p>
+              {% if speaker.bio and speaker.bio != "" %}
+                <span>{{ speaker.bio }}</span>
+              {% else %}
+                <span>{{ speaker.focus }}</span>
+              {% endif %}
+              {% include profile-icons.html links=speaker.links %}
+            </article>
+          {% endif %}
+        {% endfor %}
+      {% else %}
+        {% for speaker in featured_speakers %}
+          {% if speaker.type == "panel" %}
+            <article class="highlight">
               <h3>{{ speaker.name }}</h3>
-            {% endif %}
-            <p>{{ speaker.org }}</p>
-            {% if speaker.bio and speaker.bio != "" %}
-              <span>{{ speaker.bio }}</span>
-            {% else %}
+              <p>{{ speaker.org }}</p>
               <span>{{ speaker.focus }}</span>
-            {% endif %}
-            {% include profile-icons.html links=speaker.links %}
-          </article>
-        {% endif %}
-      {% endfor %}
+            </article>
+          {% else %}
+            <article>
+              {% if speaker.photo and speaker.photo != "" %}
+                <img class="avatar-photo" src="{{ speaker.photo | relative_url }}" alt="{{ speaker.name }}" />
+              {% else %}
+                <div class="avatar">{{ speaker.initials }}</div>
+              {% endif %}
+              {% assign profile_url = speaker.profile %}
+              {% if profile_url == nil or profile_url == "" %}
+                {% if speaker.links %}
+                  {% if speaker.links.home and speaker.links.home != "" %}
+                    {% assign profile_url = speaker.links.home %}
+                  {% elsif speaker.links.scholar and speaker.links.scholar != "" %}
+                    {% assign profile_url = speaker.links.scholar %}
+                  {% elsif speaker.links.linkedin and speaker.links.linkedin != "" %}
+                    {% assign profile_url = speaker.links.linkedin %}
+                  {% endif %}
+                {% endif %}
+              {% endif %}
+              {% if profile_url and profile_url != "" %}
+                <h3><a class="profile-link" href="{{ profile_url }}" target="_blank" rel="noopener">{{ speaker.name }}</a></h3>
+              {% else %}
+                <h3>{{ speaker.name }}</h3>
+              {% endif %}
+              <p>{{ speaker.org }}</p>
+              {% if speaker.bio and speaker.bio != "" %}
+                <span>{{ speaker.bio }}</span>
+              {% else %}
+                <span>{{ speaker.focus }}</span>
+              {% endif %}
+              {% include profile-icons.html links=speaker.links %}
+            </article>
+          {% endif %}
+        {% endfor %}
+      {% endif %}
     </div>
     {% if include.mode == "summary" %}
       <div class="speakers-actions">
