--- a/_includes/sections/updates.html
+++ b/_includes/sections/updates.html
@@ -34,9 +34,9 @@
           {% if item.link and item.link.href %}
             {% assign href = item.link.href %}
             {% if href contains "http://" or href contains "https://" or href contains "mailto:" %}
-              <a class="btn ghost" href="{{ href }}" target="_blank" rel="noopener">{{ item.link.label }}</a>
+              <a class="btn accent" href="{{ href }}" target="_blank" rel="noopener">{{ item.link.label }}</a>
             {% else %}
-              <a class="btn ghost" href="{{ href | relative_url }}">{{ item.link.label }}</a>
+              <a class="btn accent" href="{{ href | relative_url }}">{{ item.link.label }}</a>
             {% endif %}
           {% endif %}
         </article>
